Bug 680724: moved height and width checks for render buffers r=bjacob